--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-numeric-input": "^1.9.1",
+    "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-swipe-list-view": "^3.2.9",
